# Resilum

./: .gitignore  .markdownlint.yaml  .releaserc.json  .yamllint  ARCHITECTURE.md  CHANGELOG.md  NOTICE  README.md  check.sh  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  code-quality.yml  dependabot-auto-merge.yml
bridges/: bridge_config.py  bridge_models.py  bridge_spawn.py  log_setup.py  socks_tcp_interface.py  supervisor.py
bridges/bind_config/: __init__.py  apply.py  parsing.py  regions.py  render.py
bridges/covert/: __init__.py  cli.py  client.py  datagram.py  discovery.py  endpoint.py  engine.py  framing.py  icmpid.py  interfaces.py  keyx.py  netdetect.py  nftguard.py  poll.py  pubkey.py  rendezvous.py  server.py  session.py
bridges/rns_tcp_bridge/: README.md  __init__.py  __main__.py  announce_cap.py  announce_payload.py  announce_trigger.py  cache.py  cli.py  connect.py  constants.py  discovery.py  identity.py  listen.py  pump.py  version.py
bridges/vpn/: __init__.py  __main__.py  cli.py  client.py  discovery.py  framing.py  pump.py  server.py  tun.py
config/defaults/: bridges.yaml  i2pd-tunnels.conf  i2pd.conf  reticulum.config  torrc  yggdrasil.conf
docker/: Dockerfile  apt-snapshot.sources  entrypoint.sh
scripts/: generate_network_identity.py  i2pd_export_hostname.py  render_bind_config.py  yggdrasil_seed_keys.py
tests/: README.md  conftest.py
tests/smoke/: test_rns_tcp_bridge.py
tests/unit/: bind_samples.py  conftest.py  test_announce_cap.py  test_announce_payload.py  (+25 more)
(+38 files in other folders)
