[project]
name = "resilum"
version = "0.0.0"
requires-python = ">=3.11"
# Base runtime — Reticulum stack, present in every image profile.
dependencies = [
    "rns==1.3.9",
    "lxmf==1.0.1",
    "PyYAML==6.0.3",
    "pydantic==2.13.4",
]

[dependency-groups]
# Covert profile — SOCKS + ICMP/covert transports on top of base.
covert = [
    "rns-covert-transport==0.1.3",
    "PySocks==1.7.1",
]
# Full profile — Meshtastic gateway on top of covert.
full = [
    { include-group = "covert" },
    "meshtastic==2.7.11",
]
# Dev / CI toolchain on top of the covert runtime.
dev = [
    { include-group = "covert" },
    "black==26.5.1",
    "ruff==0.15.22",
    "mypy==2.3.0",
    "types-PyYAML==6.0.12.20260518",
    "pytest==9.1.1",
    "yamllint==1.38.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["bridges", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C901", "PLC0415"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["bind_config", "rns_tcp_bridge", "vpn", "supervisor", "yggdrasil_seed_keys"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pyright]
extraPaths = ["bridges"]

[tool.pytest.ini_options]
filterwarnings = ["error"]
